fix: set text wrapping on block quote

--- a/scss/components/block-quote.scss
+++ b/scss/components/block-quote.scss
@@ -7,6 +7,7 @@
 
 	&__content {
 		@include mixins.type-body-lead();
+		text-wrap: pretty;
 		padding-inline: var(--base-size-12);
 		margin-block: 0;
 
